added hotel quotations.
